tests/compile-errors/CompileErrors.cs
public static class Fake
{
    public static int Invalid(int x, int y) => x + y;
}